--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2016-06-03 Fri 01:59 -->
+<!-- 2016-06-03 Fri 09:41 -->
 <meta  http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta  name="viewport" content="width=device-width, initial-scale=1" />
 <title>Documentation for User directory web application</title>
@@ -148,54 +148,63 @@ for the JavaScript code in this tag.
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#orgheadline1">1. Data Model</a></li>
-<li><a href="#orgheadline2">2. Object Model</a></li>
-<li><a href="#orgheadline3">3. Object Relational Model</a></li>
-<li><a href="#orgheadline4">4. REST API</a></li>
-<li><a href="#orgheadline5">5. View</a></li>
+<li><a href="#orgheadline1">1. Requirements</a></li>
+<li><a href="#orgheadline2">2. Data Model</a></li>
+<li><a href="#orgheadline3">3. Object Model</a></li>
+<li><a href="#orgheadline4">4. Object Relational Model</a></li>
+<li><a href="#orgheadline5">5. REST API</a></li>
+<li><a href="#orgheadline6">6. View</a></li>
 </ul>
 </div>
 </div>
 
 <div id="outline-container-orgheadline1" class="outline-2">
-<h2 id="orgheadline1"><span class="section-number-2">1</span> Data Model</h2>
+<h2 id="orgheadline1"><span class="section-number-2">1</span> Requirements</h2>
 <div class="outline-text-2" id="text-1">
+<p>
+<a href="./intro.html">Requirements</a>
+</p>
+</div>
+</div>
+<div id="outline-container-orgheadline2" class="outline-2">
+<h2 id="orgheadline2"><span class="section-number-2">2</span> Data Model</h2>
+<div class="outline-text-2" id="text-2">
 <p>
 <a href="src/datamodel/index.html">Data Model Documentation
 </a>
 </p>
 </div>
 </div>
-<div id="outline-container-orgheadline2" class="outline-2">
-<h2 id="orgheadline2"><span class="section-number-2">2</span> Object Model</h2>
-<div class="outline-text-2" id="text-2">
+<div id="outline-container-orgheadline3" class="outline-2">
+<h2 id="orgheadline3"><span class="section-number-2">3</span> Object Model</h2>
+<div class="outline-text-2" id="text-3">
 <p>
 <a href="src/implementation/objects/index.html">Object Model Documentation</a>
 </p>
 </div>
 </div>
 
-<div id="outline-container-orgheadline3" class="outline-2">
-<h2 id="orgheadline3"><span class="section-number-2">3</span> Object Relational Model</h2>
-<div class="outline-text-2" id="text-3">
+<div id="outline-container-orgheadline4" class="outline-2">
+<h2 id="orgheadline4"><span class="section-number-2">4</span> Object Relational Model</h2>
+<div class="outline-text-2" id="text-4">
 <p>
 <a href="src/implementation/persistence/index.html">Object Relational Model Documentation
 </a>
 </p>
 </div>
 </div>
-<div id="outline-container-orgheadline4" class="outline-2">
-<h2 id="orgheadline4"><span class="section-number-2">4</span> REST API</h2>
-<div class="outline-text-2" id="text-4">
+<div id="outline-container-orgheadline5" class="outline-2">
+<h2 id="orgheadline5"><span class="section-number-2">5</span> REST API</h2>
+<div class="outline-text-2" id="text-5">
 <p>
 <a href="src/implementation/rest/index.html">REST API Documentation</a>
 </p>
 </div>
 </div>
 
-<div id="outline-container-orgheadline5" class="outline-2">
-<h2 id="orgheadline5"><span class="section-number-2">5</span> View</h2>
-<div class="outline-text-2" id="text-5">
+<div id="outline-container-orgheadline6" class="outline-2">
+<h2 id="orgheadline6"><span class="section-number-2">6</span> View</h2>
+<div class="outline-text-2" id="text-6">
 <p>
 <a href="src/implementation/web/index.html">View (Front-End) Documentation</a>
 </p>
@@ -205,7 +214,7 @@ for the JavaScript code in this tag.
 <div id="postamble" class="status">
 <p class="date">Date: <span class="timestamp-wrapper"><span class="timestamp">[2016-06-02 Thu]</span></span></p>
 <p class="author">Author: IAN GALVIN FERNANDES</p>
-<p class="date">Created: 2016-06-03 Fri 01:59</p>
+<p class="date">Created: 2016-06-03 Fri 09:41</p>
 <p class="validation"><a href="http://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
